# gitlab-flow

./: Cargo.toml
src/: main.rs  wecom.rs
src/gitlab/: webhook.rs
