[package]
name = "gitlab-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
awc =  { version = "3.0.0-beta.21", features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rustls = "0.17.0"
